# any2md

./: .gitignore  Dockerfile  HELP.md  Makefile  README.md  any2md_gui.py  install.sh  launch_any2md.desktop  launch_any2md.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
any2md/: __init__.py  cli.py  core.py  tesseract_bundled.py  utils.py
any2md/extractors/: __init__.py  archive.py  image.py  media.py  office.py  openoffice_ebook.py  pdf.py  registry.py  text.py
fixtures/: hello_ru.txt  sample.epub  sample.fb2  sample.odt
tests/: test_cli.py  test_cli_extended.py  test_core.py  test_core_extended.py  test_coverage_gap_closers.py  test_image.py  test_media.py  test_office.py  test_openoffice_ebook.py  test_pdf.py  test_tesseract_bundled.py  test_tesseract_bundled_new.py  test_text.py  test_utils.py
