[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "any2md"
version = "0.2.1"
description = "Универсальный конвертер файлов в Markdown"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MiMoCode User" }]
keywords = ["markdown", "converter", "ocr", "pdf", "docx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tqdm>=4.66",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "pypdf>=4.0",
    "pdf2image>=1.17",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "Pillow>=10.3",
    "pytesseract>=0.3.10",
    "python-magic>=0.4.27",
    "openai-whisper>=20230314",
    "torch>=2.0",
    "ttkbootstrap>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
whisper = ["openai-whisper>=20230314", "torch>=2.0"]
ocr = ["pytesseract>=0.3.10"]

[project.scripts]
any2md = "any2md.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["any2md*"]
